--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
   <br>
   <div class="copyright">
-    <span>本算法由 <a href="./wabby-wabbo">某位大神</a> 编写<br>
+    <span>本算法由 <a href="./">某位大神</a> 编写<br>
     （本站非原创仅作为备份保留）</span>
   </div>
 </div>
